--- a/Projects/VisualVk/VisualVk.vcxproj
+++ b/Projects/VisualVk/VisualVk.vcxproj
@@ -23,30 +23,30 @@
     <ProjectGuid>{326AD11D-4D55-4895-B5C7-9E5FC4735F92}</ProjectGuid>
     <RootNamespace>VisualVk2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>2. VisualVk</ProjectName>
+    <ProjectName>1. VisualVk</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -161,46 +161,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Buffers.cpp" />
     <ClCompile Include="CommandBuffer.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="PipelineLayout.cpp" />
-    <ClCompile Include="DeviceMemory.cpp" />
-    <ClCompile Include="Images.cpp" />
     <ClCompile Include="Instance.cpp" />
     <ClCompile Include="LogicalDevice.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="PhysicalDevice.cpp" />
-    <ClCompile Include="Framebuffer.cpp" />
-    <ClCompile Include="Pipelines.cpp" />
-    <ClCompile Include="Context.cpp" />
-    <ClCompile Include="Sampler.cpp" />
-    <ClCompile Include="ShaderModule.cpp" />
-    <ClCompile Include="Signals.cpp" />
-    <ClCompile Include="Swapchain.cpp" />
-    <ClCompile Include="Textures.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArrayProxy.h" />
-    <ClInclude Include="Buffers.h" />
     <ClInclude Include="CommandBuffer.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Flags.h" />
-    <ClInclude Include="Handle.h" />
-    <ClInclude Include="PipelineLayout.h" />
-    <ClInclude Include="DeviceMemory.h" />
-    <ClInclude Include="Images.h" />
     <ClInclude Include="Instance.h" />
     <ClInclude Include="LogicalDevice.h" />
     <ClInclude Include="PhysicalDevice.h" />
-    <ClInclude Include="Framebuffer.h" />
-    <ClInclude Include="Pipelines.h" />
-    <ClInclude Include="Context.h" />
     <ClInclude Include="Result.h" />
-    <ClInclude Include="Sampler.h" />
-    <ClInclude Include="ShaderModule.h" />
-    <ClInclude Include="Signals.h" />
-    <ClInclude Include="Swapchain.h" />
-    <ClInclude Include="Textures.h" />
+    <ClInclude Include="Vulkan.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
