--- a/Projects/VisualVk/VisualVk.vcxproj.filters
+++ b/Projects/VisualVk/VisualVk.vcxproj.filters
@@ -7,17 +7,23 @@
     <Filter Include="1. Context\0. Instance">
       <UniqueIdentifier>{e72290ad-0479-4829-a325-e86deca7155d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="2. Resources">
+      <UniqueIdentifier>{3032cb43-4fe8-4607-b73b-e0bc05acec6e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Context\4. CommandBuffer">
+      <UniqueIdentifier>{085c6348-8a77-4b5b-ba60-7f4be8fd8493}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Context\3. PhysicalDevice">
+      <UniqueIdentifier>{5253d1d7-ee48-413f-8bfe-8018e65696e6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Context\1. Win32Surface">
+      <UniqueIdentifier>{85a54d54-3019-4abe-98a7-b36b6c2e046c}</UniqueIdentifier>
+    </Filter>
     <Filter Include="1. Context\2. LogicalDevice">
       <UniqueIdentifier>{431e0f31-c504-4600-a8fe-aaa20f92c53f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="1. Context\1. PhysicalDevice">
-      <UniqueIdentifier>{5253d1d7-ee48-413f-8bfe-8018e65696e6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="0. Wrapper">
+    <Filter Include="0. Wrappers">
       <UniqueIdentifier>{8ec9c51d-7d26-4493-9b1f-ae80ee846b21}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1. Context\3. CommandBuffer">
-      <UniqueIdentifier>{085c6348-8a77-4b5b-ba60-7f4be8fd8493}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -26,42 +32,48 @@
       <Filter>1. Context\0. Instance</Filter>
     </ClCompile>
     <ClCompile Include="PhysicalDevice.cpp">
-      <Filter>1. Context\1. PhysicalDevice</Filter>
+      <Filter>1. Context\3. PhysicalDevice</Filter>
     </ClCompile>
     <ClCompile Include="LogicalDevice.cpp">
       <Filter>1. Context\2. LogicalDevice</Filter>
     </ClCompile>
     <ClCompile Include="CommandBuffer.cpp">
-      <Filter>1. Context\3. CommandBuffer</Filter>
+      <Filter>1. Context\4. CommandBuffer</Filter>
+    </ClCompile>
+    <ClCompile Include="Win32Surface.cpp">
+      <Filter>1. Context\1. Win32Surface</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Flags.h">
-      <Filter>0. Wrapper</Filter>
+      <Filter>0. Wrappers</Filter>
     </ClInclude>
     <ClInclude Include="ArrayProxy.h">
-      <Filter>0. Wrapper</Filter>
+      <Filter>0. Wrappers</Filter>
     </ClInclude>
     <ClInclude Include="Result.h">
-      <Filter>0. Wrapper</Filter>
+      <Filter>0. Wrappers</Filter>
     </ClInclude>
     <ClInclude Include="Instance.h">
       <Filter>1. Context\0. Instance</Filter>
     </ClInclude>
     <ClInclude Include="Vulkan.h">
-      <Filter>0. Wrapper</Filter>
+      <Filter>0. Wrappers</Filter>
     </ClInclude>
     <ClInclude Include="PhysicalDevice.h">
-      <Filter>1. Context\1. PhysicalDevice</Filter>
+      <Filter>1. Context\3. PhysicalDevice</Filter>
     </ClInclude>
     <ClInclude Include="LogicalDevice.h">
       <Filter>1. Context\2. LogicalDevice</Filter>
     </ClInclude>
     <ClInclude Include="CommandBuffer.h">
-      <Filter>1. Context\3. CommandBuffer</Filter>
+      <Filter>1. Context\4. CommandBuffer</Filter>
     </ClInclude>
     <ClInclude Include="Enums.h">
-      <Filter>0. Wrapper</Filter>
+      <Filter>0. Wrappers</Filter>
+    </ClInclude>
+    <ClInclude Include="Win32Surface.h">
+      <Filter>1. Context\1. Win32Surface</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
